# -05-proj-mulbros-media

./: .env.example  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  server.js  start-local.bat  tailwind.config.js  vite.config.js  vitest.config.js
claudeagentsdk-main/claudeagentsdk-main/platform/: CLAUDE.md  Makefile  README.md  STATUS.md  pyproject.toml  skills.md
claudeagentsdk-main/claudeagentsdk-main/platform/chat/: translations.py
claudeagentsdk-main/claudeagentsdk-main/platform/config/: branding.yaml  platform.yaml  policies.yaml
claudeagentsdk-main/claudeagentsdk-main/platform/fszt_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
claudeagentsdk-main/claudeagentsdk-main/platform/governance/: audit.py  budget.py  middleware.py  pii.py  policies.py  sandbox.py  variance.py
claudeagentsdk-main/claudeagentsdk-main/platform/oses/: CLAUDE.md  _protocol.py
claudeagentsdk-main/claudeagentsdk-main/platform/platform_os/: classifier.py  opportunity.py  registry.py  tenant.py
claudeagentsdk-main/claudeagentsdk-main/platform/shared/: config.py  events.py  logging.py  versions.py
claudeagentsdk-main/claudeagentsdk-main/platform/skills/: CLAUDE.md  _loader.py  apollo-search-query-builder.md  briefing-template.md  cold-email-first-touch.md  cold-email-follow-up.md  compliance-anti-spam.md  email-pattern-inference.md  firmographic-research.md  friendly-summary.md  icp-fit-scoring.md  icp-parsing.md  inbound-qualification.md  intent-signal-weighting.md  meeting-scheduling.md  (+9 more)
(+256 files in other folders)
